# shibui-tools

./: Cargo.toml  push-wip  run_dic_crawler.sh
shibui-resume/: Cargo.toml
shibui-resume/src/: main.rs
shibui-vocab-data/: Cargo.toml
shibui-vocab-data/src/: main.rs
shibui-vocab-data/src/scraper/: cambridge_dictionary_scraper.rs  mod.rs  scraper.rs
shibui-vocab-data/src/utils/: html_parser.rs  http_request.rs
shibui-vocab-data/src/utils/html_parser/: cambridge_elements.rs  cambridge_parser.rs
shibui_dic_crawler/: Cargo.toml
shibui_dic_crawler/src/: main.rs
shibui_dic_crawler/src/routes/: cambridge_dic.rs  get.rs  mod.rs
shibui_vocab_data/: Cargo.toml
shibui_vocab_data/src/: lib.rs  main.rs
shibui_vocab_data/src/scraper/: cambridge_dictionary_scraper.rs  mod.rs
shibui_vocab_data/src/utils/: http_request.rs  mod.rs
shibui_vocab_data/src/utils/html_parser/: cambridge_elements.rs  cambridge_parser.rs  mod.rs
simple-server/: Cargo.toml
simple-server/src/: main.rs
