[package]
name = "shibui_dic_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = {version = "1.40.0", features = ["full"]}
shibui_vocab_data = {path = "../shibui_vocab_data"}
anyhow = {version = "1.0.89", features = ["default", "backtrace"]}
serde_json = {version = "1.0.128"}
serde = {version = "1.0.210", features = ["derive"]}
