[package]
name = "shibui_vocab_data"
description = "Shibui dictionary vocabulary fetcher"
version = "0.1.0"
authors = ["Do Tran", "quackablequackquack@gmail.com"]
edition = "2021"

[lib]
name ="shibui_vocab_data"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.5"
anyhow = "1.0.86"
scraper = "0.20.0"
clap = { version = "4.5.16", features = ["derive"] }
serde_json = {version = "1.0.128"}
serde = {version = "1.0.210", features = ["derive"]}
